# nixops-libvirtd

./: README.md  default.nix  env.nix  flake.nix  overrides.nix  pyproject.toml  release.nix  setup.py  shell.nix
.github/workflows/: ci.yml
ci/: check-flake8.sh  check-formatting.sh  check-mypy.sh  shell.nix
examples/: trivial-virtd.nix  virtd-network.nix
nix/: default.nix  libvirtd-image.nix  libvirtd-network.nix  libvirtd.nix
nixops_virtd/: plugin.py
nixops_virtd/backends/: libvirtd.py
nixops_virtd/nix/: libvirtd.nix
nixopsvirtd/: plugin.py
nixopsvirtd/backends/: libvirtd.py
nixopsvirtd/resources/: __init__.py  libvirtd_network.py
