[tool.poetry]
name = "nixops_virtd"
version = "1.0"
description = "NixOps plugin for virtd"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
include = [ "nixops_libvirtd/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git"}
libvirt-python = "^6.1"

[tool.poetry.plugins."nixops"]
virtd = "nixops_virtd.plugin"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
