[tool.poetry]
name = "nixops_virtd"
version = "1.0"
description = "NixOps plugin for virtd"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
include = [ "nixops_libvirtd/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git"}
libvirt-python = "^8.0"

[tool.poetry.plugins."nixops"]
virtd = "nixops_virtd.plugin"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.941"
black = "^22.1.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
